FIND_PACKAGE(VTK REQUIRED)
IF (VTK_FOUND)
  INCLUDE (${VTK_USE_FILE})
ENDIF (VTK_FOUND)

FIND_PACKAGE(Eigen3 REQUIRED)
IF (EIGEN3_FOUND)
	INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
ENDIF (EIGEN3_FOUND)

SET(SRC_LIST main.cpp)

ADD_EXECUTABLE(optimal_nonrigid_icp ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

TARGET_LINK_LIBRARIES(optimal_nonrigid_icp ${VTK_LIBRARIES})

INSTALL(TARGETS optimal_nonrigid_icp RUNTIME DESTINATION bin)