ADD_EXECUTABLE(tpsdemo main.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

TARGET_LINK_LIBRARIES(tpsdemo GLU /usr/lib/nvidia-331/libGL.so glut)

ADD_EXECUTABLE(2d-morph 2d-morph.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INSTALL(TARGETS tpsdemo 2d-morph RUNTIME DESTINATION bin)